--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/winky-rough": "^5.2.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
@@ -18,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
+    "framer-motion": "^12.12.1",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
